18.2.7-ingress-persistence-profile/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-persistence-profile
  namespace: avi-feature
  labels:
    feature: persistence-profile 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: persistence-profile
