18.2.7-ingress-persistence-profile/nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-persistence-profile
  namespace: avi-feature
  labels:
    feature: persistence-profile   
  annotations:
    avi_proxy: '{"pool":{"application_persistence_profile_ref": "/api/applicationpersistenceprofile?name=System-Persistence-Http-Cookie"}}'
spec:
  rules:
  - host: persistence-profile.demo.corp.local
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nginx-persistence-profile
          servicePort: 80
